--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
   <link rel="stylesheet" href="css/general.css">
   <link rel="stylesheet" href="css/style.css">
+
+  <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule="" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"></script>
+
   <title>Omnifood</title>
 </head>
 
@@ -52,6 +56,19 @@
         <div class="hero-img-box">
           <img src="./img/hero.png" class="hero-img"
             alt="Woman enjoying food, meals in storage container, and food bowls on a table.">
+        </div>
+      </div>
+    </section>
+
+    <section class="section-featured">
+      <div class="container">
+        <h2 class="heading-featured-in">As featured in </h2>
+        <div class="logos">
+          <img src="./img/logos/techcrunch.png" alt="Techcrunch logo">
+          <img src="./img/logos/business-insider.png" alt="Business Insider logo">
+          <img src="./img/logos/the-new-york-times.png" alt="The New York Times logo">
+          <img src="./img/logos/forbes.png" alt="Forbes logo">
+          <img src="./img/logos/usa-today.png" alt="Usa Today">
         </div>
       </div>
     </section>
@@ -111,6 +128,36 @@
         <div class="step-img-box">
           <img src="./img/app/app-screen-3.png" class="step-img" alt="delivery screen" />
         </div>
+      </div>
+    </section>
+
+    <section class="section-meals">
+      <div class="container">
+        <span class="subheading">Meals</span>
+        <h2 class="heading-secondary">Omnifood AI chooses from 5,000+ recipes</h2>
+
+      </div>
+
+      <div class="container grid grid--3-cols">
+        <div class="meal">
+          <img src="img/meals/meal-1.jpg" class="meal-img" alt="Japanese Gyozas" />
+          <span class="tag">Vegetarian</span>
+          <p class="meal-title">Japanese Gyozas</p>
+          <ul class="meal-attributes">
+            <li class="meal-attribute">
+              <ion-icon name="flame-outline"></ion-icon> <span> 650 calories </span>
+            </li>
+            <li class="meal-attribute">
+              <ion-icon name="restaurant-outline"></ion-icon> <span> NutriScore &reg; 74</span>
+            </li>
+            <li class="meal-attribute">
+              <ion-icon name="star-outline"></ion-icon> <span> 4.9 rating (537)</span>
+            </li>
+          </ul>
+
+        </div>
+        <div class="meal">Meals</div>
+        <div class="list">List of diets</div>
       </div>
     </section>
 
