started cta action

--- a/index.html
+++ b/index.html
@@ -411,6 +411,10 @@
       </div>
     </section>
 
+    <section class="section-cta">
+      <div class="container"></div>
+    </section>
+
   </main>
 
 
