--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 
 <body>
   <header class="header">
-    <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo">
+    <a href="#">
+      <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo"></a>
     <nav class="main-nav">
       <ul class="main-nav-list">
-        <li><a href="#" class="main-nav-link">Section 1</a></li>
-        <li><a href="#" class="main-nav-link">Section 2</a></li>
-        <li><a href="#" class="main-nav-link">Section 3</a></li>
-        <li><a href="#" class="main-nav-link">Section 4</a></li>
-        <li><a href="#" class="main-nav-link nav-cta">Section 5</a></li>
+        <li><a href="#" class="main-nav-link">How it works</a></li>
+        <li><a href="#" class="main-nav-link">Meals</a></li>
+        <li><a href="#" class="main-nav-link">Testimonials</a></li>
+        <li><a href="#" class="main-nav-link">Pricing</a></li>
+        <li><a href="#" class="main-nav-link nav-cta">Try for free</a></li>
       </ul>
     </nav>
   </header>
@@ -441,7 +442,7 @@
                 </select>
               </div>
 
-              <button class="btn">Sign up now</button>
+              <button class="btn btn--form">Sign up now</button>
             </form>
           </div>
           <div class="cta-img-box" role="img" aria-label="Women enjoying food"></div>
@@ -450,6 +451,73 @@
     </section>
 
   </main>
+
+  <footer class="footer">
+    <nav class="container grid grid-footer ">
+      <div class="logo-col">
+        <a href="#" class="footer-logo">
+          <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo"></a>
+
+        <ul class="social-links">
+          <li><a href="#" class="footer-link">
+              <ion-icon class="social-icons" name="logo-instagram"></ion-icon>
+            </a></li>
+          <li><a href="#" class="footer-link">
+              <ion-icon class="social-icons" name="logo-facebook"></ion-icon>
+            </a></li>
+          <li><a href="#" class="footer-link">
+              <ion-icon class="social-icons" name="logo-twitter"></ion-icon>
+            </a></li>
+        </ul>
+
+        <p class="copyright">copyright &copy; 2027 by Omnifood.All right reserved</p>
+
+
+      </div>
+
+      <div class="address-col">
+        <p class="footer-heading">Contact us</p>
+        <address class="contacts">
+          <p class="address">623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+          <p>
+            <a class="footer-link" href="tel:415-201-6370">
+              415-201-6370</a>
+            <br>
+            <a class="footer-link" href="mailto:hello@omnifood.com"> hello@omnifood.com</a>
+          </p>
+        </address>
+      </div>
+      <nav class="nav-col">
+        <div class="footer-heading">Account</div>
+        <ul class="footer-nav">
+          <li><a class="footer-link" href=""> Create account</a></li>
+          <li><a class="footer-link" href="">Sign in</a></li>
+          <li><a class="footer-link" href="">iOS app</a></li>
+          <li><a class="footer-link" href="">Android app</a></li>
+        </ul>
+      </nav>
+
+      <nav class="nav-col">
+        <div class="footer-heading">company</div>
+        <ul class="footer-nav">
+          <li><a class="footer-link" href=""> About Omnifood</a></li>
+          <li><a class="footer-link" href="">For Business</a></li>
+          <li><a class="footer-link" href="">Cooking partners</a></li>
+          <li><a class="footer-link" href="">Careers</a></li>
+        </ul>
+      </nav>
+
+      <nav class="nav-col">
+        <div class="footer-heading">Resources</div>
+        <ul class="footer-nav">
+          <li><a class="footer-link" href="">Recipe directory</a></li>
+          <li><a class="footer-link" href="">Help center</a></li>
+          <li><a class="footer-link" href="">Privacy & terms</a></li>
+        </ul>
+      </nav>
+
+    </nav>
+  </footer>
 
 
 </body>
