--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <header class="header nav-open">
+  <header class="header ">
     <a href="#">
       <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo"></a>
     <nav class="main-nav">
