added mobile navigation functionalities

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
   <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule="" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"></script>
+  <script defer src="./js/script.js"></script>
 
   <title>Omnifood</title>
 </head>
 
 <body>
-  <header class="header ">
+  <header class="header">
     <a href="#">
       <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo"></a>
     <nav class="main-nav">
@@ -32,7 +33,7 @@
       </ul>
     </nav>
 
-    <button class="btn-mobile-nav ">
+    <button class="btn-mobile-nav">
       <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
       <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
     </button>
@@ -476,7 +477,7 @@
             </a></li>
         </ul>
 
-        <p class="copyright">copyright &copy; 2027 by Omnifood.All right reserved</p>
+        <p class="copyright">copyright &copy; <span class="year">2027</span> by Omnifood.All right reserved</p>
 
 
       </div>
